cmake_minimum_required(VERSION 3.5)
project(EigenVectorization)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-march=native")

find_package(Eigen3 REQUIRED)

include_directories(${EIGEN3_INCLUDE_DIR})

add_executable(unaligned_vectorization unaligned_vectorization.cpp)
add_executable(aligned_vectorization aligned_vectorization.cpp)
add_executable(encapsulated_vectorization encapsulated_vectorization.cpp)
add_executable(unaligned_heap_vectorization unaligned_heap_vectorization.cpp)
add_executable(aligned_heap_vectorization aligned_heap_vectorization.cpp)
add_executable(malicious_aligned_heap_vectorization malicious_aligned_heap_vectorization.cpp)
add_executable(antimalicious_heap_vectorization antimalicious_aligned_heap_vectorization.cpp)